fix nav bar z-index

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -107,9 +107,8 @@ video#bgvideo {
 }
 
 .main-nav {
-  background: rgba(0, 0, 0, 0.3);
-
   &__link-box {
+    z-index: 1;
     display: flex;  
     justify-content: space-evenly;
     position: fixed;
